--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,3 +18,5 @@ jobs:
         run: npm run lint
       - name: build
         run: npm run build
+      - name: test
+        run: echo "Running tests!"
